Cleaned/organized code. Added new file to make stuff easier.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport"/>
 		<title>Game Framework</title>
+		<script type="text/javascript" src="js/Custom.js"></script>
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 
         <script src="js/states/BootState.js"></script>
