Organized my code differently, added a menu state, and implemented transitions (translate and fade).

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <script src="js/states/BootState.js"></script>
         <script src="js/states/LoadingState.js"></script>
+        <script src="js/states/MenuState.js"></script>
         <script src="js/states/GameState.js"></script>
 
         <script type="text/javascript" src="js/main.js"></script>
